--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.16.10",
     "@astrojs/check": "^0.9.4",
+    "astro": "^4.16.10",
+    "astro-icon": "^1.1.2",
     "typescript": "^5.6.3"
+  },
+  "devDependencies": {
+    "@iconify-json/fa6-solid": "^1.2.1"
   }
 }
