--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.16.10",
     "@astrojs/check": "^0.9.4",
+    "astro": "^4.16.10",
+    "swiper": "^11.1.14",
     "typescript": "^5.6.3"
   }
 }
