--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "^15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-select": "^5.8.3",
     "swiper": "^11.1.14",
     "typescript": "^5.6.3"
