--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "^18.3.1",
     "astro": "^4.16.10",
     "astro-icon": "^1.1.2",
+    "firebase": "^11.1.0",
     "next": "^15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
