--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-select": "^5.8.3",
+    "solid-js": "^1.9.3",
     "swiper": "^11.1.14",
     "typescript": "^5.6.3"
   },
