--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "veehac-astro",
   "type": "module",
   "version": "0.0.1",
-"scripts": {
-  "frontend": "astro dev",
-  "backend": "cd src/backend && python -m uvicorn main:app --reload",
-  "dev": "concurrently \"npm run frontend\" \"npm run backend\"",
-  "start": "npm run dev",
-  "build": "astro build",
-  "preview": "astro preview",
-  "astro": "astro"
-},
+  "scripts": {
+    "frontend": "astro dev",
+    "backend": "cd src/backend && python -m uvicorn main:app --reload",
+    "dev": "concurrently \"npm run frontend\" \"npm run backend\"",
+    "start": "npm run dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
+  },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/react": "^3.6.2",
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@iconify-json/fa6-solid": "^1.2.1",
+    "concurrently": "^9.1.0",
     "prettier": "^3.3.3",
     "prettier-plugin-astro": "^0.14.1"
   }
