--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^5.3.0",
     "react-select": "^5.8.3",
     "solid-js": "^1.9.3",
+    "sweetalert2": "^11.15.10",
     "swiper": "^11.1.14",
     "typescript": "^5.6.3"
   },
